have a nice day!

--- a/indexes/nsc1025/156.md
+++ b/indexes/nsc1025/156.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [田云：新疆书记陈全国离任 其人权劣迹引关注](../../pages/nsc1025/n13460255.md) 
+#### [胡平：纪念苏联解体30周年](../../pages/nsc1025/n13460548.md) 
+#### [王赫：世界四位金融巨头与2021中国](../../pages/nsc1025/n13460277.md) 
+#### [谭笑飞：习近平连任的难度](../../pages/nsc1025/n13460424.md) 
+#### [李正宽：最近遭外媒起底的三个中共官员](../../pages/nsc1025/n13460328.md) 
+#### [袁斌：西安封城前后魔幻迭出，怎一个乱字了得](../../pages/nsc1025/n13460353.md) 
+#### [杨威：中共未能从美国捞到的十大筹码（上）](../../pages/nsc1025/n13460195.md) 
+#### [【名家专栏】中共渗透很危险 美国大学需警惕](../../pages/nsc1025/n13457990.md) 
 #### [田云：美禁新疆产品 中共忧心党媒连发八文](../../pages/nsc1025/n13458813.md) 
 #### [周晓辉：上海向北京发难 中共内部严重分裂](../../pages/nsc1025/n13458302.md) 
 #### [王友群：二十大前中共权斗已经公开化](../../pages/nsc1025/n13458587.md) 
@@ -22,14 +30,6 @@
 #### [钟原：中共调整关税 暴露制造业短板（下）](../../pages/nsc1025/n13452148.md) 
 #### [田云：西安疫情暴发 官媒自曝形势严峻](../../pages/nsc1025/n13454420.md) 
 #### [程晓农：俄中实施“背靠背”战略？](../../pages/nsc1025/n13454349.md) 
-#### [郝平：“陈耀明私印2万亿同号钞” 中共为何急辟谣？](../../pages/nsc1025/n13453918.md) 
-#### [【名家专栏】投票率曝“香港全程民主”谎言](../../pages/nsc1025/n13453213.md) 
-#### [王赫：2021世界经济的两大动向](../../pages/nsc1025/n13452754.md) 
-#### [田云：哈佛教授罪成 美司法案震慑中共](../../pages/nsc1025/n13452166.md) 
-#### [杨威：中共报复制裁 中美关系陷新低潮](../../pages/nsc1025/n13452115.md) 
-#### [【名家专栏】中共利用警察培训渗透外国政府](../../pages/nsc1025/n13450770.md) 
-#### [周晓辉：川普提索赔60万亿 北京回应说明两件事](../../pages/nsc1025/n13451425.md) 
-#### [张菁：学生举报老师 中共教唆为维持洗脑谎言](../../pages/nsc1025/n13451374.md) 
 
 ---
 #### 第 [ [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) ] 页
