--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：失聪人和小提琴的情结](../../pages/nsc1028/n13459280.md) 
 #### [楚一丁：与中山之路背道而驰的中共强权之路](../../pages/nsc1028/n13437270.md) 
 #### [王友群：中共左祸横行时仍坚持独立思考的顾准](../../pages/nsc1028/n13444722.md) 
 #### [中共罪恶录之六十三：克拉玛依大火](../../pages/nsc1028/n13443384.md) 
@@ -29,7 +30,6 @@
 #### [李清：我舅舅逃离大陆](../../pages/nsc1028/n13343329.md) 
 #### [以中山之名 行共产之实](../../pages/nsc1028/n13346437.md) 
 #### [王友群：“云南王”谭甫仁被暗杀之谜](../../pages/nsc1028/n13357123.md) 
-#### [中共罪行录之五十六：地质学泰斗的不堪晚年](../../pages/nsc1028/n13355675.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
