--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】惨无人道，中共活摘器官全流程](../../pages/nsc993/n13460362.md) 
+#### [陈达：中共“散伙演弃”之闹剧黑幕开启](../../pages/nsc993/n13460411.md) 
+#### [ 伍新：“铁毛左”换“护身符”](../../pages/nsc993/n13460399.md) 
 #### [【网海拾贝】李田田事件是中共无法无天的标志](../../pages/nsc993/n13459302.md) 
 #### [中共是最恐怖的反人类组织](../../pages/nsc993/n13458673.md) 
 #### [袁斌：李田田事件，到底谁在说谎？](../../pages/nsc993/n13459294.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】入世二十年，中共履行承诺了吗？](../../pages/nsc993/n13431146.md) 
 #### [【网海拾贝】冬奥会将变全运会，哦耶！](../../pages/nsc993/n13429343.md) 
 #### [千百度：从“小粉红”到一名法轮功修炼者](../../pages/nsc993/n13429249.md) 
-#### [网友讥讽上海红楼案：“这就是中国好五倍的人权？”](../../pages/nsc993/n13429214.md) 
-#### [【网海拾贝】北京奥运遭抵制，万邦来朝梦碎](../../pages/nsc993/n13426682.md) 
-#### [【网海拾贝】北京冬奥会提前失去了光彩](../../pages/nsc993/n13423999.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
