have a nice day!

--- a/indexes/nsc1025/156.md
+++ b/indexes/nsc1025/156.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】史上最大的企业福利受益者](../../pages/nsc1025/n13460538.md) 
+#### [【名家专栏】非洲已经沦为中共殖民地](../../pages/nsc1025/n13460616.md) 
+#### [袁斌：2021年末，中国经济萧条颓像掠影](../../pages/nsc1025/n13462112.md) 
+#### [洪桥：中共的香港封关政策到底坑苦了谁？](../../pages/nsc1025/n13461922.md) 
+#### [岳山：疆粤渝异动 政治局卡位战六层解码](../../pages/nsc1025/n13461412.md) 
+#### [周田：美军哪些武器令中共军队难以应对（七）](../../pages/nsc1025/n13460901.md) 
 #### [田云：新疆书记陈全国离任 其人权劣迹引关注](../../pages/nsc1025/n13460255.md) 
 #### [胡平：纪念苏联解体30周年](../../pages/nsc1025/n13460548.md) 
 #### [王赫：世界四位金融巨头与2021中国](../../pages/nsc1025/n13460277.md) 
@@ -24,12 +30,6 @@
 #### [夏林 :香港立法会，中共的第九个花瓶](../../pages/nsc1025/n13455849.md) 
 #### [李宇明：中纪委为什么只管王力宏却不管张高丽](../../pages/nsc1025/n13455657.md) 
 #### [【有冇搞错】中国进入“抢钱时代”](../../pages/nsc1025/n13455628.md) 
-#### [齐航：2021年世界六大联盟围堵中共](../../pages/nsc1025/n13455602.md) 
-#### [何清涟：2022中国经济：内忧难解 “外需”不确定](../../pages/nsc1025/n13455281.md) 
-#### [袁斌：精神病院里还关着多少被迫害的李田田们？](../../pages/nsc1025/n13455249.md) 
-#### [钟原：中共调整关税 暴露制造业短板（下）](../../pages/nsc1025/n13452148.md) 
-#### [田云：西安疫情暴发 官媒自曝形势严峻](../../pages/nsc1025/n13454420.md) 
-#### [程晓农：俄中实施“背靠背”战略？](../../pages/nsc1025/n13454349.md) 
 
 ---
 #### 第 [ [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) ] 页
