--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [中国人权律师团律师：关于郭飞雄先生、唐吉田律师失踪的声明](../../pages/nsc993/n13460929.md) 
+#### [【网海拾贝】2021，中国遭遇“十面埋伏”的一年](../../pages/nsc993/n13462157.md) 
 #### [【网海拾贝】惨无人道，中共活摘器官全流程](../../pages/nsc993/n13460362.md) 
 #### [陈达：中共“散伙演弃”之闹剧黑幕开启](../../pages/nsc993/n13460411.md) 
 #### [ 伍新：“铁毛左”换“护身符”](../../pages/nsc993/n13460399.md) 
@@ -28,8 +30,6 @@
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13432163.md) 
 #### [伍新：坟坑沿裸秀悲凉](../../pages/nsc993/n13432204.md) 
 #### [【网海拾贝】入世二十年，中共履行承诺了吗？](../../pages/nsc993/n13431146.md) 
-#### [【网海拾贝】冬奥会将变全运会，哦耶！](../../pages/nsc993/n13429343.md) 
-#### [千百度：从“小粉红”到一名法轮功修炼者](../../pages/nsc993/n13429249.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
