have a nice day!

--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [王丹母亲病逝  没等到儿归  王丹：血海深仇算在中共头上](../../pages/nsc993/n13463057.md) 
 #### [中国人权律师团律师：关于郭飞雄先生、唐吉田律师失踪的声明](../../pages/nsc993/n13460929.md) 
 #### [【网海拾贝】2021，中国遭遇“十面埋伏”的一年](../../pages/nsc993/n13462157.md) 
 #### [【网海拾贝】惨无人道，中共活摘器官全流程](../../pages/nsc993/n13460362.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】中共自称最民主，全世界都笑了](../../pages/nsc993/n13432337.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13432163.md) 
 #### [伍新：坟坑沿裸秀悲凉](../../pages/nsc993/n13432204.md) 
-#### [【网海拾贝】入世二十年，中共履行承诺了吗？](../../pages/nsc993/n13431146.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
