--- a/indexes/nsc1025/156.md
+++ b/indexes/nsc1025/156.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共特色民主的真面目](../../pages/nsc1025/n13462519.md) 
+#### [田云：李田田事件与中共治下“被精神病”黑幕](../../pages/nsc1025/n13463912.md) 
+#### [程晓农：从哈佛教授落网看中共“千人计划”](../../pages/nsc1025/n13463618.md) 
+#### [王赫：陈全国的动向诡异](../../pages/nsc1025/n13463029.md) 
+#### [沈舟：中共真想挑起新甲午战争吗？（下）](../../pages/nsc1025/n13463112.md) 
+#### [王友群：曾庆红亲信苏荣把家变“权钱交易所”](../../pages/nsc1025/n13463003.md) 
+#### [【名家专栏】中共对圣诞节的打压](../../pages/nsc1025/n13462720.md) 
 #### [【名家专栏】史上最大的企业福利受益者](../../pages/nsc1025/n13460538.md) 
 #### [【名家专栏】非洲已经沦为中共殖民地](../../pages/nsc1025/n13460616.md) 
 #### [袁斌：2021年末，中国经济萧条颓像掠影](../../pages/nsc1025/n13462112.md) 
@@ -23,13 +30,6 @@
 #### [【名家专栏】新数据显示疫苗难阻疫情](../../pages/nsc1025/n13457907.md) 
 #### [田云：香港局势引国际关注 打脸中共白皮书](../../pages/nsc1025/n13456762.md) 
 #### [【名家专栏】强迫民众服从 从来都没有出路](../../pages/nsc1025/n13456215.md) 
-#### [【名家专栏】华为2012年曾攻击美澳网络](../../pages/nsc1025/n13455456.md) 
-#### [谢田：震旦为什么需要普度？](../../pages/nsc1025/n13456097.md) 
-#### [【名家专栏】通胀下美国工薪家庭怎样过圣诞](../../pages/nsc1025/n13455446.md) 
-#### [王友群：王沪宁是“世界上最危险的人”？](../../pages/nsc1025/n13453934.md) 
-#### [夏林 :香港立法会，中共的第九个花瓶](../../pages/nsc1025/n13455849.md) 
-#### [李宇明：中纪委为什么只管王力宏却不管张高丽](../../pages/nsc1025/n13455657.md) 
-#### [【有冇搞错】中国进入“抢钱时代”](../../pages/nsc1025/n13455628.md) 
 
 ---
 #### 第 [ [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) ] 页
