--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】2022年，中美都有大戏可看](../../pages/nsc993/n13468924.md) 
+#### [“西安买菜难”上热搜 网民：菜都在新闻里](../../pages/nsc993/n13468637.md) 
 #### [【网海拾贝】李田田回家了，但李田田事件仍没完](../../pages/nsc993/n13465887.md) 
 #### [官员有一百种方法对付上访者儿子？网民：大实话](../../pages/nsc993/n13465561.md) 
 #### [王丹母亲病逝  没等到儿归  王丹：血海深仇算在中共头上](../../pages/nsc993/n13463057.md) 
@@ -28,8 +30,6 @@
 #### [“2021年失业的人真的很多吗？”](../../pages/nsc993/n13438732.md) 
 #### [【网海拾贝】中共重新定义民主 欲抢夺民主话语权](../../pages/nsc993/n13438697.md) 
 #### [谢燕益：没有私心就不会有恐惧——梁小军律师吊照听证代理词](../../pages/nsc993/n13437175.md) 
-#### [【网海拾贝】台湾与中共：时与势在谁一边？](../../pages/nsc993/n13434295.md) 
-#### [【网海拾贝】中共自称最民主，全世界都笑了](../../pages/nsc993/n13432337.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
