have a nice day!

--- a/indexes/nsc1025/157.md
+++ b/indexes/nsc1025/157.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [张菁：中共“全过程民主”遭四位女性打脸](../../pages/nsc1025/n13472824.md) 
+#### [岳山：习新年贺词释抬毛去邓两大信号](../../pages/nsc1025/n13472533.md) 
+#### [王友群：曾庆红亲信宋林案了犹未了](../../pages/nsc1025/n13470170.md) 
+#### [袁斌：有100种方法刑拘上访者的何止一个王书记](../../pages/nsc1025/n13472549.md) 
+#### [王赫：中共的铁矿石困局为何难解？](../../pages/nsc1025/n13471532.md) 
+#### [沈舟：2021年美军印太部署图片赏析（上）](../../pages/nsc1025/n13471130.md) 
+#### [【名家专栏】中共全球军事训练的目的](../../pages/nsc1025/n13469389.md) 
 #### [【有冇搞错】恼羞成怒 港共搜抓“立场”](../../pages/nsc1025/n13467507.md) 
 #### [田云：打压《立场新闻》犯众怒 中共是灾难根源](../../pages/nsc1025/n13468113.md) 
 #### [钟原：2021年中共的十大糗事（上）](../../pages/nsc1025/n13467989.md) 
@@ -23,13 +30,6 @@
 #### [沈舟：中共真想挑起新甲午战争吗？（下）](../../pages/nsc1025/n13463112.md) 
 #### [王友群：曾庆红亲信苏荣把家变“权钱交易所”](../../pages/nsc1025/n13463003.md) 
 #### [【名家专栏】中共对圣诞节的打压](../../pages/nsc1025/n13462720.md) 
-#### [【名家专栏】史上最大的企业福利受益者](../../pages/nsc1025/n13460538.md) 
-#### [【名家专栏】非洲已经沦为中共殖民地](../../pages/nsc1025/n13460616.md) 
-#### [袁斌：2021年末，中国经济萧条颓像掠影](../../pages/nsc1025/n13462112.md) 
-#### [洪桥：中共的香港封关政策到底坑苦了谁？](../../pages/nsc1025/n13461922.md) 
-#### [岳山：疆粤渝异动 政治局卡位战六层解码](../../pages/nsc1025/n13461412.md) 
-#### [周田：美军哪些武器令中共军队难以应对（七）](../../pages/nsc1025/n13460901.md) 
-#### [田云：新疆书记陈全国离任 其人权劣迹引关注](../../pages/nsc1025/n13460255.md) 
 
 ---
 #### 第 [ [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) ] 页
