--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [清荷：谁种的苦果？](../../pages/nsc1035/n13470084.md) 
 #### [美国人在金门：通往自由前线的旅程](../../pages/nsc1035/n13453438.md) 
 #### [【名家专栏】圣诞心愿：权利与自由](../../pages/nsc1035/n13453241.md) 
 #### [赵阳：我行走在黑白两道的舅舅，和他错选的人生](../../pages/nsc1035/n13438837.md) 
@@ -29,7 +30,6 @@
 #### [邢鉴：我与新西兰国会议员见面](../../pages/nsc1035/n13111626.md) 
 #### [清荷：生活在假话大国里](../../pages/nsc1035/n13103916.md) 
 #### [【名家专栏】反迫害22周年 铭记那些英勇的人](../../pages/nsc1035/n13102771.md) 
-#### [林青：天国乐团的能量冲击波](../../pages/nsc1035/n13099634.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
