--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】崛起见顶的中共会更加咄咄逼人](../../pages/nsc993/n13472584.md) 
+#### [伍新：西安过年谣](../../pages/nsc993/n13470369.md) 
+#### [吴新：“豆腐渣”能团结成“钢铁”吗？](../../pages/nsc993/n13470344.md) 
 #### [【网海拾贝】2022年，中美都有大戏可看](../../pages/nsc993/n13468924.md) 
 #### [“西安买菜难”上热搜 网民：菜都在新闻里](../../pages/nsc993/n13468637.md) 
 #### [【网海拾贝】李田田回家了，但李田田事件仍没完](../../pages/nsc993/n13465887.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】2021，中国民营经济最冷的一年](../../pages/nsc993/n13443352.md) 
 #### [【网海拾贝】中国经济灾难与2022的全球变数](../../pages/nsc993/n13440982.md) 
 #### [清华教授：“对安保无节制投入，究竟在防谁？”](../../pages/nsc993/n13440939.md) 
-#### [“2021年失业的人真的很多吗？”](../../pages/nsc993/n13438732.md) 
-#### [【网海拾贝】中共重新定义民主 欲抢夺民主话语权](../../pages/nsc993/n13438697.md) 
-#### [谢燕益：没有私心就不会有恐惧——梁小军律师吊照听证代理词](../../pages/nsc993/n13437175.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
