have a nice day!

--- a/indexes/nsc1025/157.md
+++ b/indexes/nsc1025/157.md
@@ -1,5 +1,15 @@
 ### 纪元评论：时政评论
 ---
+#### [李明：疫苗不能控制疫情 自救是出路](../../pages/nsc1025/n13474969.md) 
+#### [【名家专栏】扭转失败防疫政策的机遇](../../pages/nsc1025/n13474708.md) 
+#### [金言：中国还有18亿亩耕地吗？](../../pages/nsc1025/n13474960.md) 
+#### [杨威：习近平2022新年贺词省略了展望](../../pages/nsc1025/n13472856.md) 
+#### [钟原：2021年中共的十大糗事（下）](../../pages/nsc1025/n13472738.md) 
+#### [【名家专栏】中国人口日益减少是经济大问题](../../pages/nsc1025/n13472487.md) 
+#### [周晓辉：北京政局很诡异 发生了什么事？](../../pages/nsc1025/n13467656.md) 
+#### [二大爷 ：写在2022：千夫诺诺易，一士谔谔难](../../pages/nsc1025/n13473117.md) 
+#### [明心：中共修改《民事诉讼法》出现大翻车](../../pages/nsc1025/n13473089.md) 
+#### [周晓辉： 年末荒唐事 北京协和医学院成立马院](../../pages/nsc1025/n13472968.md) 
 #### [张菁：中共“全过程民主”遭四位女性打脸](../../pages/nsc1025/n13472824.md) 
 #### [岳山：习新年贺词释抬毛去邓两大信号](../../pages/nsc1025/n13472533.md) 
 #### [王友群：曾庆红亲信宋林案了犹未了](../../pages/nsc1025/n13470170.md) 
@@ -20,16 +30,6 @@
 #### [周晓辉：从邓到习汲取苏联解体的教训了吗？](../../pages/nsc1025/n13465212.md) 
 #### [王友群：习近平与曾庆红内斗的三件事](../../pages/nsc1025/n13465503.md) 
 #### [【名家专栏】中共“脑控”技术的伦理危机](../../pages/nsc1025/n13464719.md) 
-#### [【名家专栏】逃离蓝州的都是什么人？](../../pages/nsc1025/n13465344.md) 
-#### [何清涟：2021的世界年度词：极变](../../pages/nsc1025/n13465080.md) 
-#### [钟原：中共政治局承认形势严峻“史所罕见”](../../pages/nsc1025/n13465030.md) 
-#### [【名家专栏】中共特色民主的真面目](../../pages/nsc1025/n13462519.md) 
-#### [田云：李田田事件与中共治下“被精神病”黑幕](../../pages/nsc1025/n13463912.md) 
-#### [程晓农：从哈佛教授落网看中共“千人计划”](../../pages/nsc1025/n13463618.md) 
-#### [王赫：陈全国的动向诡异](../../pages/nsc1025/n13463029.md) 
-#### [沈舟：中共真想挑起新甲午战争吗？（下）](../../pages/nsc1025/n13463112.md) 
-#### [王友群：曾庆红亲信苏荣把家变“权钱交易所”](../../pages/nsc1025/n13463003.md) 
-#### [【名家专栏】中共对圣诞节的打压](../../pages/nsc1025/n13462720.md) 
 
 ---
 #### 第 [ [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) ] 页
