--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】2022年中国经济：走“回”头路到“灭”顶？](../../pages/nsc993/n13474003.md) 
 #### [【网海拾贝】崛起见顶的中共会更加咄咄逼人](../../pages/nsc993/n13472584.md) 
 #### [伍新：西安过年谣](../../pages/nsc993/n13470369.md) 
 #### [吴新：“豆腐渣”能团结成“钢铁”吗？](../../pages/nsc993/n13470344.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】在美上市中国公司3年内将玩完？](../../pages/nsc993/n13445178.md) 
 #### [【网海拾贝】2021，中国民营经济最冷的一年](../../pages/nsc993/n13443352.md) 
 #### [【网海拾贝】中国经济灾难与2022的全球变数](../../pages/nsc993/n13440982.md) 
-#### [清华教授：“对安保无节制投入，究竟在防谁？”](../../pages/nsc993/n13440939.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
