have a nice day!

--- a/indexes/nsc1025/158.md
+++ b/indexes/nsc1025/158.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：《求是》新年刊登习近平讲话 释何信号](../../pages/nsc1025/n13475200.md) 
 #### [沈舟：2021年美军印太部署图片赏析（下）](../../pages/nsc1025/n13473009.md) 
 #### [郝平：党媒首发习六中会上讲话 释不寻常信号](../../pages/nsc1025/n13475100.md) 
 #### [李明：疫苗不能控制疫情 自救是出路](../../pages/nsc1025/n13474969.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】哪些人在逃离蓝州？](../../pages/nsc1025/n13466256.md) 
 #### [蔡慎坤：中国离世界第一还有多远？](../../pages/nsc1025/n13466203.md) 
 #### [杨威：中共未能从美国捞到的十大筹码（下）](../../pages/nsc1025/n13465820.md) 
-#### [周晓辉：从邓到习汲取苏联解体的教训了吗？](../../pages/nsc1025/n13465212.md) 
 
 ---
-#### 第 [ [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) ] 页
+#### 第 [ [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) ] 页
