--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [云鹤天：作孽](../../pages/nsc993/n13477094.md) 
+#### [中国民主党2022新年致辞：结束暴政 建立现代政治文明新中国](../../pages/nsc993/n13475379.md) 
 #### [【网海拾贝】2022年中国经济：走“回”头路到“灭”顶？](../../pages/nsc993/n13474003.md) 
 #### [【网海拾贝】崛起见顶的中共会更加咄咄逼人](../../pages/nsc993/n13472584.md) 
 #### [伍新：西安过年谣](../../pages/nsc993/n13470369.md) 
@@ -28,8 +30,6 @@
 #### [官方称“就业形势总体稳定”，评论区大翻车](../../pages/nsc993/n13446333.md) 
 #### [海网：中共已完全丧失了存在的“资格”](../../pages/nsc993/n13445762.md) 
 #### [【网海拾贝】在美上市中国公司3年内将玩完？](../../pages/nsc993/n13445178.md) 
-#### [【网海拾贝】2021，中国民营经济最冷的一年](../../pages/nsc993/n13443352.md) 
-#### [【网海拾贝】中国经济灾难与2022的全球变数](../../pages/nsc993/n13440982.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
