--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：我们都是喝狼奶长大的](../../pages/nsc1028/n13471478.md) 
+#### [彩虹护守的土地 为什么世界不能失去台湾](../../pages/nsc1028/n13476849.md) 
 #### [中共对世界的腐蚀与伤害](../../pages/nsc1028/n13463833.md) 
 #### [王友群：曾庆红亲信苏荣把家变“权钱交易所”](../../pages/nsc1028/n13463003.md) 
 #### [李清：失聪人和小提琴的情结](../../pages/nsc1028/n13459280.md) 
@@ -28,8 +30,6 @@
 #### [李清：倪匡逃港后 成“香港四大才子”之一](../../pages/nsc1028/n13377522.md) 
 #### [惠虎宇：中共掠夺财富之恶](../../pages/nsc1028/n13374142.md) 
 #### [中共罪行录之五十七：文革毁坏的名胜古迹](../../pages/nsc1028/n13373282.md) 
-#### [李清：陶希圣之女 留在了大陆](../../pages/nsc1028/n13367727.md) 
-#### [李清：我舅舅逃离大陆](../../pages/nsc1028/n13343329.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
