--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】2022：点燃内心火焰，照亮艰巨行](../../pages/nsc993/n13478397.md) 
 #### [一位西安女生发烧求医的魔幻经历](../../pages/nsc993/n13478285.md) 
 #### [云鹤天：作孽](../../pages/nsc993/n13477094.md) 
 #### [中国民主党2022新年致辞：结束暴政 建立现代政治文明新中国](../../pages/nsc993/n13475379.md) 
@@ -29,7 +30,6 @@
 #### [中共暂停微软搜索引擎，网友斥“不干人事儿”](../../pages/nsc993/n13446416.md) 
 #### [【网海拾贝】中国人权2021年全面倒退](../../pages/nsc993/n13446392.md) 
 #### [官方称“就业形势总体稳定”，评论区大翻车](../../pages/nsc993/n13446333.md) 
-#### [海网：中共已完全丧失了存在的“资格”](../../pages/nsc993/n13445762.md) 
 
 ---
-#### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
+#### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
