--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】山雨欲来风满楼 2022缠斗更白热化](../../pages/nsc993/n13481060.md) 
+#### [西安小伙外出买馒头被群殴，网友：土匪](../../pages/nsc993/n13478427.md) 
 #### [【网海拾贝】2022：点燃内心火焰，照亮艰巨行](../../pages/nsc993/n13478397.md) 
 #### [一位西安女生发烧求医的魔幻经历](../../pages/nsc993/n13478285.md) 
 #### [云鹤天：作孽](../../pages/nsc993/n13477094.md) 
@@ -28,8 +30,6 @@
 #### [张又普：我所知道的中共在美国招聘间谍案例](../../pages/nsc993/n13449142.md) 
 #### [【网海拾贝】震旦学生是“告密者”还是“吹哨人”？](../../pages/nsc993/n13448316.md) 
 #### [中共暂停微软搜索引擎，网友斥“不干人事儿”](../../pages/nsc993/n13446416.md) 
-#### [【网海拾贝】中国人权2021年全面倒退](../../pages/nsc993/n13446392.md) 
-#### [官方称“就业形势总体稳定”，评论区大翻车](../../pages/nsc993/n13446333.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
