--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [刘子冀：那些肮脏龌龊的二三事](../../pages/nsc993/n13484178.md) 
+#### [【网海拾贝】中国过去一年里有多少人死于封城？](../../pages/nsc993/n13482907.md) 
 #### [【网海拾贝】山雨欲来风满楼 2022缠斗更白热化](../../pages/nsc993/n13481060.md) 
 #### [西安小伙外出买馒头被群殴，网友：土匪](../../pages/nsc993/n13478427.md) 
 #### [【网海拾贝】2022：点燃内心火焰，照亮艰巨行](../../pages/nsc993/n13478397.md) 
@@ -28,8 +30,6 @@
 #### [西安每48小时测1次核酸，网友：“有病吗？”](../../pages/nsc993/n13450529.md) 
 #### [【网海拾贝】彭帅否认性侵，你信吗？](../../pages/nsc993/n13450482.md) 
 #### [张又普：我所知道的中共在美国招聘间谍案例](../../pages/nsc993/n13449142.md) 
-#### [【网海拾贝】震旦学生是“告密者”还是“吹哨人”？](../../pages/nsc993/n13448316.md) 
-#### [中共暂停微软搜索引擎，网友斥“不干人事儿”](../../pages/nsc993/n13446416.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
