have a nice day!

--- a/indexes/nsc1025/159.md
+++ b/indexes/nsc1025/159.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】被中共收买的美国学者](../../pages/nsc1025/n13486382.md) 
+#### [【名家专栏】Omicron正持续摧毁中国经济](../../pages/nsc1025/n13486168.md) 
 #### [王赫：支持立陶宛 欧盟须直面挑战](../../pages/nsc1025/n13484994.md) 
 #### [周晓辉：西安清零引众怒 陕西高官甩锅北京？](../../pages/nsc1025/n13484627.md) 
 #### [【有冇搞错】虎年围观黑天鹅](../../pages/nsc1025/n13484632.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】怎样应对中共、脑控和未来之战？](../../pages/nsc1025/n13478963.md) 
 #### [【名家专栏】维持美国军队的专业精神](../../pages/nsc1025/n13476105.md) 
 #### [杨威：2022年中美关系走向的五大看点](../../pages/nsc1025/n13477375.md) 
-#### [王友群：2022年习近平会拿下“铁帽子王”吗？](../../pages/nsc1025/n13473211.md) 
-#### [钟原：《求是》新年刊登习近平讲话 释何信号](../../pages/nsc1025/n13475200.md) 
 
 ---
-#### 第 [ [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) ] 页
+#### 第 [ [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) ] 页
