have a nice day!

--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【谈股论金】美联储三重紧缩 金融市场吹寒风](../../pages/nsc1026/n13487202.md) 
 #### [王赫：2022中国经济令人忧心](../../pages/nsc1026/n13480433.md) 
 #### [【谈股论金】再谈暴涨暴跌的比特币](../../pages/nsc1026/n13428036.md) 
 #### [【美股瞭望】1920年代美股大行情会重现吗？](../../pages/nsc1026/n13425425.md) 
@@ -29,7 +30,6 @@
 #### [善如：华尔街的野性与彪悍](../../pages/nsc1026/n13112664.md) 
 #### [【谈股论金】国际油价80美元或成近年天花板](../../pages/nsc1026/n13108524.md) 
 #### [【美股瞭望】Delta疫情冲击股市 或让通胀降温](../../pages/nsc1026/n13100297.md) 
-#### [陈思敏：数据之外 中国经济放缓压力有多大？](../../pages/nsc1026/n13085576.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
