--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,11 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】看懂西安悲剧，只须读懂西安人的三句话](../../pages/nsc993/n13488057.md) 
+#### [陈达：西安撤雁塔区头的背后原由](../../pages/nsc993/n13488756.md) 
+#### [理悟：写给大陆劫难中的同胞们](../../pages/nsc993/n13488623.md) 
+#### [伍新：清零行霸凌](../../pages/nsc993/n13488526.md) 
+#### [西安心绞痛患者被拒诊后离世激怒网民](../../pages/nsc993/n13488004.md) 
+#### [谢田：中国经济趋势认识误区——推特上的讨论](../../pages/nsc993/n13487969.md) 
 #### [【网海拾贝】“可防可控”的原来一直是“人民”](../../pages/nsc993/n13486007.md) 
 #### [刘子冀：那些肮脏龌龊的二三事](../../pages/nsc993/n13484178.md) 
 #### [【网海拾贝】中国过去一年里有多少人死于封城？](../../pages/nsc993/n13482907.md) 
@@ -24,12 +30,6 @@
 #### [陈达：中共“散伙演弃”之闹剧黑幕开启](../../pages/nsc993/n13460411.md) 
 #### [ 伍新：“铁毛左”换“护身符”](../../pages/nsc993/n13460399.md) 
 #### [【网海拾贝】李田田事件是中共无法无天的标志](../../pages/nsc993/n13459302.md) 
-#### [中共是最恐怖的反人类组织](../../pages/nsc993/n13458673.md) 
-#### [袁斌：李田田事件，到底谁在说谎？](../../pages/nsc993/n13459294.md) 
-#### [【网海拾贝】京沪再次打擂台，中共内斗升温](../../pages/nsc993/n13457732.md) 
-#### [【网海拾贝】寒流滚滚 更严酷网络扫荡来了](../../pages/nsc993/n13455879.md) 
-#### [西安每48小时测1次核酸，网友：“有病吗？”](../../pages/nsc993/n13450529.md) 
-#### [【网海拾贝】彭帅否认性侵，你信吗？](../../pages/nsc993/n13450482.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
