have a nice day!

--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [麦克阿瑟的韩战及台湾预言](../../pages/nsc1028/n13479197.md) 
 #### [李清：我们都是喝狼奶长大的](../../pages/nsc1028/n13471478.md) 
 #### [彩虹护守的土地 为什么世界不能失去台湾](../../pages/nsc1028/n13476849.md) 
 #### [中共对世界的腐蚀与伤害](../../pages/nsc1028/n13463833.md) 
@@ -29,7 +30,6 @@
 #### [中共百年 是造福人民还是祸害人民（上）](../../pages/nsc1028/n13388697.md) 
 #### [李清：倪匡逃港后 成“香港四大才子”之一](../../pages/nsc1028/n13377522.md) 
 #### [惠虎宇：中共掠夺财富之恶](../../pages/nsc1028/n13374142.md) 
-#### [中共罪行录之五十七：文革毁坏的名胜古迹](../../pages/nsc1028/n13373282.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
