--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共：兴于夏奥2008，将败于冬奥2022](../../pages/nsc993/n13490419.md) 
+#### [孕妇流产事件 西安高新医院背锅](../../pages/nsc993/n13490369.md) 
 #### [【网海拾贝】看懂西安悲剧，只须读懂西安人的三句话](../../pages/nsc993/n13488057.md) 
 #### [陈达：西安撤雁塔区头的背后原由](../../pages/nsc993/n13488756.md) 
 #### [理悟：写给大陆劫难中的同胞们](../../pages/nsc993/n13488623.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】2021，中国遭遇“十面埋伏”的一年](../../pages/nsc993/n13462157.md) 
 #### [【网海拾贝】惨无人道，中共活摘器官全流程](../../pages/nsc993/n13460362.md) 
 #### [陈达：中共“散伙演弃”之闹剧黑幕开启](../../pages/nsc993/n13460411.md) 
-#### [ 伍新：“铁毛左”换“护身符”](../../pages/nsc993/n13460399.md) 
-#### [【网海拾贝】李田田事件是中共无法无天的标志](../../pages/nsc993/n13459302.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
