have a nice day!

--- a/indexes/nsc1025/159.md
+++ b/indexes/nsc1025/159.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】Omicron或有助今冬结束大流行](../../pages/nsc1025/n13491194.md) 
+#### [周田：中共若开战 哪些弱点可能变硬伤（一）](../../pages/nsc1025/n13491030.md) 
+#### [大重置的关键一环：疫苗护照重置公民权利](../../pages/nsc1025/n13490962.md) 
 #### [岳山：中共向西安孕妇致歉的五个隐秘原因](../../pages/nsc1025/n13490770.md) 
 #### [【名家专栏】中共打压港媒 不可坐视不管](../../pages/nsc1025/n13490471.md) 
 #### [李正宽：栗战书诡秘失踪 流言折射内幕](../../pages/nsc1025/n13490019.md) 
@@ -27,9 +30,6 @@
 #### [王友群：炒作习近平亲信慎海雄娶佟丽娅的背后](../../pages/nsc1025/n13484511.md) 
 #### [张菁：那些卑微小人物的生命 止步于2021年](../../pages/nsc1025/n13484570.md) 
 #### [【名家专栏】美国应该全面抵制北京冬奥会](../../pages/nsc1025/n13483748.md) 
-#### [【纪元专栏】恢复加拿大国会中国特别委员会 关乎国家利益](../../pages/nsc1025/n13484263.md) 
-#### [林忌：传媒倒闭不断 信心流失移民潮不绝](../../pages/nsc1025/n13483173.md) 
-#### [沈舟：习近平2022年1号军令的大变化](../../pages/nsc1025/n13482815.md) 
 
 ---
 #### 第 [ [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) ] 页
