--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】站在悬崖上的习近平](../../pages/nsc993/n13492323.md) 
+#### [西安十大魔幻事件，防疫乱象打脸清零](../../pages/nsc993/n13492159.md) 
 #### [【网海拾贝】中共：兴于夏奥2008，将败于冬奥2022](../../pages/nsc993/n13490419.md) 
 #### [孕妇流产事件 西安高新医院背锅](../../pages/nsc993/n13490369.md) 
 #### [【网海拾贝】看懂西安悲剧，只须读懂西安人的三句话](../../pages/nsc993/n13488057.md) 
@@ -28,8 +30,6 @@
 #### [王丹母亲病逝  没等到儿归  王丹：血海深仇算在中共头上](../../pages/nsc993/n13463057.md) 
 #### [中国人权律师团律师：关于郭飞雄先生、唐吉田律师失踪的声明](../../pages/nsc993/n13460929.md) 
 #### [【网海拾贝】2021，中国遭遇“十面埋伏”的一年](../../pages/nsc993/n13462157.md) 
-#### [【网海拾贝】惨无人道，中共活摘器官全流程](../../pages/nsc993/n13460362.md) 
-#### [陈达：中共“散伙演弃”之闹剧黑幕开启](../../pages/nsc993/n13460411.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
