--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [李清：“方脑袋”的德国人](../../pages/nsc1035/n13486826.md) 
 #### [吴玉：《聚会Ⅱ》新年职场大PK，拷问直击心灵](../../pages/nsc1035/n13482329.md) 
 #### [清荷：谁种的苦果？](../../pages/nsc1035/n13470084.md) 
 #### [美国人在金门：通往自由前线的旅程](../../pages/nsc1035/n13453438.md) 
@@ -29,7 +30,6 @@
 #### [黄翔：宇宙时空岩文（之一）](../../pages/nsc1035/n13140355.md) 
 #### [石山：郑州雨灾激活的感言](../../pages/nsc1035/n13135372.md) 
 #### [邢鉴：我与新西兰国会议员见面](../../pages/nsc1035/n13111626.md) 
-#### [清荷：生活在假话大国里](../../pages/nsc1035/n13103916.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
