have a nice day!

--- a/indexes/nsc1025/159.md
+++ b/indexes/nsc1025/159.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13494708.md) 
+#### [杨威：中共算不算哈萨克斯坦的“外部势力”](../../pages/nsc1025/n13494163.md) 
+#### [【名家专栏】美工会老板不再为工人利益发声？](../../pages/nsc1025/n13492676.md) 
 #### [【名家专栏】Omicron或有助今冬结束大流行](../../pages/nsc1025/n13491194.md) 
 #### [周田：中共若开战 哪些弱点可能变硬伤（一）](../../pages/nsc1025/n13491030.md) 
 #### [大重置的关键一环：疫苗护照重置公民权利](../../pages/nsc1025/n13490962.md) 
@@ -27,9 +30,6 @@
 #### [何清涟：德国从“绿能先锋”惨变为“绿能孤儿”](../../pages/nsc1025/n13486060.md) 
 #### [袁斌：西安婴儿胎死腹中，这不是抗疫，是变相杀人](../../pages/nsc1025/n13485938.md) 
 #### [【名家专栏】香港：真相与自由已死](../../pages/nsc1025/n13483739.md) 
-#### [王友群：炒作习近平亲信慎海雄娶佟丽娅的背后](../../pages/nsc1025/n13484511.md) 
-#### [张菁：那些卑微小人物的生命 止步于2021年](../../pages/nsc1025/n13484570.md) 
-#### [【名家专栏】美国应该全面抵制北京冬奥会](../../pages/nsc1025/n13483748.md) 
 
 ---
 #### 第 [ [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) ] 页
