--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [永不停止的谎言与暴力 从“长津湖战役”说起](../../pages/nsc1028/n13494094.md) 
+#### [张菁： 蒋介石“驸马”陆久之效命中共被打成反革命](../../pages/nsc1028/n13495439.md) 
+#### [王友群：毛泽东的“御用文人”王力被打倒之谜](../../pages/nsc1028/n13493098.md) 
 #### [麦克阿瑟的韩战及台湾预言](../../pages/nsc1028/n13479197.md) 
 #### [李清：我们都是喝狼奶长大的](../../pages/nsc1028/n13471478.md) 
 #### [彩虹护守的土地 为什么世界不能失去台湾](../../pages/nsc1028/n13476849.md) 
@@ -27,9 +30,6 @@
 #### [我们从小到大学到的历史哪些是假的（11）](../../pages/nsc1028/n13395097.md) 
 #### [中共罪行录之五十九：文革中的“栏杆市事件”](../../pages/nsc1028/n13390605.md) 
 #### [中共百年 是造福人民还是祸害人民（下）](../../pages/nsc1028/n13389389.md) 
-#### [中共百年 是造福人民还是祸害人民（上）](../../pages/nsc1028/n13388697.md) 
-#### [李清：倪匡逃港后 成“香港四大才子”之一](../../pages/nsc1028/n13377522.md) 
-#### [惠虎宇：中共掠夺财富之恶](../../pages/nsc1028/n13374142.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
