--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】北京冬奥箭在弦上，病毒难料](../../pages/nsc993/n13494656.md) 
+#### [网友：中共防疫已经进入歇斯底里的状态](../../pages/nsc993/n13494227.md) 
 #### [【网海拾贝】站在悬崖上的习近平](../../pages/nsc993/n13492323.md) 
 #### [西安十大魔幻事件，防疫乱象打脸清零](../../pages/nsc993/n13492159.md) 
 #### [【网海拾贝】中共：兴于夏奥2008，将败于冬奥2022](../../pages/nsc993/n13490419.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】李田田回家了，但李田田事件仍没完](../../pages/nsc993/n13465887.md) 
 #### [官员有一百种方法对付上访者儿子？网民：大实话](../../pages/nsc993/n13465561.md) 
 #### [王丹母亲病逝  没等到儿归  王丹：血海深仇算在中共头上](../../pages/nsc993/n13463057.md) 
-#### [中国人权律师团律师：关于郭飞雄先生、唐吉田律师失踪的声明](../../pages/nsc993/n13460929.md) 
-#### [【网海拾贝】2021，中国遭遇“十面埋伏”的一年](../../pages/nsc993/n13462157.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
