have a nice day!

--- a/indexes/nsc1025/160.md
+++ b/indexes/nsc1025/160.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [郝平：中共支持哈国镇压 被疑烧制内斗镜像？](../../pages/nsc1025/n13497952.md) 
+#### [杨宁：又一央视主持人赵赫死于癌症 苍天饶过谁？](../../pages/nsc1025/n13497655.md) 
 #### [王赫：2022拜登政府如何与中共打科技战？](../../pages/nsc1025/n13496893.md) 
 #### [田云：中共政法风暴背后的因果报应](../../pages/nsc1025/n13496264.md) 
 #### [周晓辉：疫情防不胜防  让中国人认清四件事](../../pages/nsc1025/n13495551.md) 
@@ -28,8 +30,6 @@
 #### [朱木隶：西安怪像背后，警惕中共以屠杀患者实现“动态”清零](../../pages/nsc1025/n13486898.md) 
 #### [岳山：中纪委新规藏习近平掌权的秘密？](../../pages/nsc1025/n13486505.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13486754.md) 
-#### [【名家专栏】被中共收买的美国学者](../../pages/nsc1025/n13486382.md) 
-#### [【名家专栏】Omicron正持续摧毁中国经济](../../pages/nsc1025/n13486168.md) 
 
 ---
-#### 第 [ [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) ] 页
+#### 第 [ [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) ] 页
