--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】西安封城事件不亚于新疆的集中营](../../pages/nsc993/n13496983.md) 
+#### [袁斌：时代的灰照样会落在小粉红头上](../../pages/nsc993/n13496821.md) 
 #### [【网海拾贝】北京冬奥箭在弦上，病毒难料](../../pages/nsc993/n13494656.md) 
 #### [网友：中共防疫已经进入歇斯底里的状态](../../pages/nsc993/n13494227.md) 
 #### [【网海拾贝】站在悬崖上的习近平](../../pages/nsc993/n13492323.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】2022年，中美都有大戏可看](../../pages/nsc993/n13468924.md) 
 #### [“西安买菜难”上热搜 网民：菜都在新闻里](../../pages/nsc993/n13468637.md) 
 #### [【网海拾贝】李田田回家了，但李田田事件仍没完](../../pages/nsc993/n13465887.md) 
-#### [官员有一百种方法对付上访者儿子？网民：大实话](../../pages/nsc993/n13465561.md) 
-#### [王丹母亲病逝  没等到儿归  王丹：血海深仇算在中共头上](../../pages/nsc993/n13463057.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
