--- a/indexes/nsc1025/160.md
+++ b/indexes/nsc1025/160.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共仍停留在旧的经济模式](../../pages/nsc1025/n13499996.md) 
+#### [钟原：习近平再示警 称考验“前所未有”](../../pages/nsc1025/n13498393.md) 
+#### [【名家专栏】中共芬太尼正在毒杀美国人](../../pages/nsc1025/n13497438.md) 
 #### [郝平：中共支持哈国镇压 被疑烧制内斗镜像？](../../pages/nsc1025/n13497952.md) 
 #### [杨宁：又一央视主持人赵赫死于癌症 苍天饶过谁？](../../pages/nsc1025/n13497655.md) 
 #### [王赫：2022拜登政府如何与中共打科技战？](../../pages/nsc1025/n13496893.md) 
@@ -27,9 +30,6 @@
 #### [觅真：遏制人权恶化 呼唤正义良知](../../pages/nsc1025/n13488648.md) 
 #### [颜纯钩：塑造孩子的健全人格，才能对抗中共洗脑](../../pages/nsc1025/n13488545.md) 
 #### [杨威：日本正日益成为亚洲关键角色](../../pages/nsc1025/n13487497.md) 
-#### [朱木隶：西安怪像背后，警惕中共以屠杀患者实现“动态”清零](../../pages/nsc1025/n13486898.md) 
-#### [岳山：中纪委新规藏习近平掌权的秘密？](../../pages/nsc1025/n13486505.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13486754.md) 
 
 ---
 #### 第 [ [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) ] 页
