have a nice day!

--- a/indexes/nsc1025/160.md
+++ b/indexes/nsc1025/160.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [李宇明：中共治下 核酸检测造假算是常态](../../pages/nsc1025/n13502718.md) 
+#### [袁斌：中共不计代价清零背后的深层逻辑](../../pages/nsc1025/n13501619.md) 
+#### [谢田：摊牌时刻？美中第一阶段协议两年期满](../../pages/nsc1025/n13501263.md) 
+#### [沈舟：俄罗斯军事行动没能帮中共减轻压力](../../pages/nsc1025/n13500551.md) 
+#### [王友群：习近平二十大前“防政变”四大举措](../../pages/nsc1025/n13500588.md) 
+#### [【名家专栏】中共与人权水火不容](../../pages/nsc1025/n13500019.md) 
+#### [夏林：“我灭共”袭来 中共和北京冬奥岂止难堪](../../pages/nsc1025/n13500485.md) 
 #### [【名家专栏】中共仍停留在旧的经济模式](../../pages/nsc1025/n13499996.md) 
 #### [钟原：习近平再示警 称考验“前所未有”](../../pages/nsc1025/n13498393.md) 
 #### [【名家专栏】中共芬太尼正在毒杀美国人](../../pages/nsc1025/n13497438.md) 
@@ -23,13 +30,6 @@
 #### [王赫：哈国事变 中共遭三重打击](../../pages/nsc1025/n13489399.md) 
 #### [程晓农：通过全球股市比较 看中国经济衰微](../../pages/nsc1025/n13489223.md) 
 #### [王友群：中共点名的六个“野心家、阴谋家”](../../pages/nsc1025/n13489448.md) 
-#### [【名家专栏】中共利用社交媒体进行政治战](../../pages/nsc1025/n13488559.md) 
-#### [【名家专栏】成本推动型通货膨胀 站不住脚](../../pages/nsc1025/n13488716.md) 
-#### [杨宁：朝鲜无疫情？中共驻朝大使回国揭密](../../pages/nsc1025/n13489104.md) 
-#### [颜丹：中共防疫酿饥荒 西安人喊“我要吃饭”](../../pages/nsc1025/n13489064.md) 
-#### [觅真：遏制人权恶化 呼唤正义良知](../../pages/nsc1025/n13488648.md) 
-#### [颜纯钩：塑造孩子的健全人格，才能对抗中共洗脑](../../pages/nsc1025/n13488545.md) 
-#### [杨威：日本正日益成为亚洲关键角色](../../pages/nsc1025/n13487497.md) 
 
 ---
 #### 第 [ [160](./160.md) / [159](./159.md) / [158](./158.md) / [157](./157.md) / [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) ] 页
