--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共令多少家庭迫分离无法相见？](../../pages/nsc993/n13501682.md) 
+#### [网传小米内置反诈中心APP，网民：隐私上交国家](../../pages/nsc993/n13499499.md) 
 #### [新华网嘲讽美国抗疫失败反被网友群嘲](../../pages/nsc993/n13499197.md) 
 #### [【网海拾贝】中共意图建一个“海外省”](../../pages/nsc993/n13499393.md) 
 #### [郑纯清：科学非大道 亦非无捷径](../../pages/nsc993/n13498854.md) 
@@ -28,8 +30,6 @@
 #### [云鹤天：作孽](../../pages/nsc993/n13477094.md) 
 #### [中国民主党2022新年致辞：结束暴政 建立现代政治文明新中国](../../pages/nsc993/n13475379.md) 
 #### [【网海拾贝】2022年中国经济：走“回”头路到“灭”顶？](../../pages/nsc993/n13474003.md) 
-#### [【网海拾贝】崛起见顶的中共会更加咄咄逼人](../../pages/nsc993/n13472584.md) 
-#### [伍新：西安过年谣](../../pages/nsc993/n13470369.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
