--- a/indexes/nsc993/70.md
+++ b/indexes/nsc993/70.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】保不保钟南山？北京当局的难题](../../pages/nsc993/n13504215.md) 
+#### [颜纯钩：屋漏偏逢连夜雨，冬奥抗疫两相冲](../../pages/nsc993/n13504177.md) 
+#### [无名氏：论保党](../../pages/nsc993/n13503956.md) 
 #### [【网海拾贝】中共令多少家庭迫分离无法相见？](../../pages/nsc993/n13501682.md) 
 #### [网传小米内置反诈中心APP，网民：隐私上交国家](../../pages/nsc993/n13499499.md) 
 #### [新华网嘲讽美国抗疫失败反被网友群嘲](../../pages/nsc993/n13499197.md) 
@@ -27,9 +30,6 @@
 #### [西安小伙外出买馒头被群殴，网友：土匪](../../pages/nsc993/n13478427.md) 
 #### [【网海拾贝】2022：点燃内心火焰，照亮艰巨行](../../pages/nsc993/n13478397.md) 
 #### [一位西安女生发烧求医的魔幻经历](../../pages/nsc993/n13478285.md) 
-#### [云鹤天：作孽](../../pages/nsc993/n13477094.md) 
-#### [中国民主党2022新年致辞：结束暴政 建立现代政治文明新中国](../../pages/nsc993/n13475379.md) 
-#### [【网海拾贝】2022年中国经济：走“回”头路到“灭”顶？](../../pages/nsc993/n13474003.md) 
 
 ---
 #### 第 [ [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) ] 页
